--- a/wp-content/themes/AP-Birkemosegaard-theme/assets/css/pages/index.css
+++ b/wp-content/themes/AP-Birkemosegaard-theme/assets/css/pages/index.css
@@ -245,7 +245,7 @@
   color: var(--green800);
 }
 .facebook-logo {
-  color: #1877f2; /* Facebook blå */
+  color: #1877f2;
   margin-bottom: 0.5rem;
 }
 .facebook-logo svg {
